@@ -65,7 +65,7 @@ error_mime = "text/html;charset=UTF-8"
 error400 = "/var/www/error/400.html"
 error403 = "/var/www/error/403.html"
 error404 = "/var/www/error/404.html"
-error500 = "/var/www/error/500.html"
+error500 = "/var/www/error/500.html" 
 error501 = "/var/www/error/501.html"
 error505 = "/var/www/error/505.html"
 
@@ -123,7 +123,7 @@ session_life = 300
 
 //File sender
 
-//The file sender uses asynchronous file I/O, so it needs totake buffors
+//The file sender uses asynchronous file I/O, so it needs to use buffors
 //The size of buffor is also size of data sent in single TCP packet
 //The size is by default 56KiB
 fsn_frame_buf_size = 57344
@@ -134,4 +134,14 @@ use_ssl = 0
 
 ssl_key_file=
 ssl_crt_file=
+
+
+//Performance
+
+//If this option is set to 1 only one thread can execute page at time
+//this will improve server reliability but will decrase stability
+global_pexec_mutex=1
+
+
+
 
